--- a/software/client/app/src/main/res/values/strings.xml
+++ b/software/client/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="text_credentials">Credentials</string>
     <string name="text_personal_data">Personal Data</string>
     <string name="text_organization_data">Organization Data</string>
+    <string name="text_company_name">Organization Data</string>
+    <string name="text_not_implemented">Not Implemented :(</string>
     <string name="hint_username">Username</string>
     <string name="hint_password">Password</string>
     <string name="hint_repeat_password">Repeat Password</string>
@@ -17,6 +19,11 @@
     <string name="button_signup">Signup</string>
     <string name="button_login">Login</string>
     <string name="button_back">Back</string>
+    <string name="button_change_credentials">Change Credentials</string>
+    <string name="button_change_new_request">New Request</string>
+    <string name="button_change_view_data">View Data</string>
+    <string name="button_view_requests">View Requests</string>
+    <string name="switch_automated_sos">Automated Sos</string>
     <string name="tab_individual">Individual</string>
     <string name="tab_third_party">Third Party</string>
     <string name="action_settings">Settings</string>
@@ -26,4 +33,12 @@
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
     <string name="tab_text_3">Tab 3</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
