--- a/software/client/app/src/main/res/values/strings.xml
+++ b/software/client/app/src/main/res/values/strings.xml
@@ -31,13 +31,11 @@
     <string name="switch_automated_sos">Automated Sos</string>
     <string name="tab_individual">Individual</string>
     <string name="tab_third_party">Third Party</string>
+    <string name="tab_request_group">Group</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_registration">RegistrationActivity</string>
     <string name="title_activity_test">test</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
-    <string name="tab_text_3">Tab 3</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
