Updates from ShareLaTeX

--- a/DD/main.tex
+++ b/DD/main.tex
@@ -263,26 +263,39 @@ The system is deployed on three different layers: the Client layer, the Server l
 \end{figure}
 \begin{figure}[!htpb]
     \centering
-    \includegraphics[width=100mm,keepaspectratio]{DD/images/UML/component_Track4Run.jpg}
+    \includegraphics[width=60mm,keepaspectratio]{DD/images/UML/component_Track4Run.jpg}
     \caption{Track4Run Component Diagram}
     \label{fig:component_track4run}
 \end{figure}
-
 \begin{figure}[!htpb]
     \centering
     \includegraphics[width=\textwidth,keepaspectratio]{DD/images/er_diagram.png}
     \caption{ER Diagram}
     \label{fig:ER_trackme}
 \end{figure}
-
 \newpage
 \subsection{Deployment View}
 \begin{figure}[!htpb]
     \centering
-    \includegraphics[width=100mm,keepaspectratio]{images/UML/deployment_TrackMe.jpg}
+    \includegraphics[width=80mm,keepaspectratio]{images/UML/deployment_TrackMe.jpg}
     \caption{TrackMe Deployment Diagram}
     \label{fig:deployment_trackme}
 \end{figure}    
+
+\subsection{Class Diagram}
+\begin{figure}[!htpb]
+    \centering
+    \includegraphics[width=180mm,keepaspectratio,angle=90]{DD/images/UML/ClassDiagram.jpg}
+    \caption{Class Diagram}
+    \label{fig:CD_trackme}
+\end{figure}
+
+\begin{figure}[!htpb]
+    \centering
+    \includegraphics[width=\textwidth,keepaspectratio]{DD/images/UML/ClassDiagram.jpg}
+    \caption{Class Diagram: entities}
+    \label{fig:CDentities_trackme}
+\end{figure}
     
 \newpage
 \subsection{Runtime View}
