Changed Class Diagram angle

--- a/DD/main.tex
+++ b/DD/main.tex
@@ -285,17 +285,18 @@ The system is deployed on three different layers: the Client layer, the Server l
 \subsection{Class Diagram}
 \begin{figure}[!htpb]
     \centering
-    \includegraphics[width=180mm,keepaspectratio,angle=90]{DD/images/UML/ClassDiagram.jpg}
+    \advance\leftskip-3cm
+    \includegraphics[width=1.5\textwidth,keepaspectratio]{DD/images/UML/ClassDiagram.jpg}
     \caption{Class Diagram}
-    \label{fig:CD_trackme}
-\end{figure}
+    \label{fig:class_diagram}
+\end{figure} 
 
 \begin{figure}[!htpb]
     \centering
-    \includegraphics[width=\textwidth,keepaspectratio]{DD/images/UML/ClassDiagram.jpg}
-    \caption{Class Diagram: entities}
-    \label{fig:CDentities_trackme}
-\end{figure}
+    \advance\leftskip-0.3cm
+    \includegraphics[width=1.1\textwidth,keepaspectratio]{DD/images/UML/ClassDiagram1.jpg}
+    \label{fig:class_diagram_entities}
+\end{figure} 
     
 \newpage
 \subsection{Runtime View}
