--- a/DD/frontpage.tex
+++ b/DD/frontpage.tex
@@ -22,7 +22,7 @@
     \fontsize{22px}{8mm}\selectfont \textsc{\textbf{Design Document}}
 \end{center}
 \begin{center}
-    \fontsize{14px}{4mm}\selectfont \textsc{{Draft Version 0.3 - 11/11/2018}}
+    \fontsize{14px}{4mm}\selectfont \textsc{{Version 1.0 - 10/12/2018}}
 \end{center}
 \hfill
 \hfill
