--- a/software/client/app/src/main/res/values/strings.xml
+++ b/software/client/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="text_subscribe">Subscribe</string>
     <string name="text_motivation">Motivation (Optional)</string>
     <string name="text_confirm">Confirm</string>
+    <string name="text_view_old_requests">View Old Requests</string>
+    <string name="text_no_request_received">No request received yet!</string>
     <string name="text_not_implemented">Not Implemented :(</string>
     <string name="hint_username">Username</string>
     <string name="hint_password">Password</string>
